--- a/Node/package.json
+++ b/Node/package.json
@@ -28,6 +28,8 @@
     "nodemailer": "^6.1.1",
     "sharp": "^0.33.4",
     "slugify": "^1.3.4",
+    "strip": "^3.0.0",
+    "stripe": "^15.12.0",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.1"
   },
