--- a/React/package.json
+++ b/React/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.6.8",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
