--- a/React/package.json
+++ b/React/package.json
@@ -7,6 +7,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "bootstrap-icons": "^1.11.3",
+    "lightbox.js-react": "^1.0.9",
     "lightgallery": "^2.7.2",
     "react": "^18.2.0",
     "react-datepicker": "^7.1.0",
