--- a/Node/.env
+++ b/Node/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb://0.0.0.0:27017/App
+DATABASE=mongodb+srv://ramyraed10:RRRrrr123@tourismcluster.zqyem.mongodb.net/
 JWT_SECRET=my-ultra-secure-app-elly-m4-ht2dr-tegy-gnbo
 JWT_EXPIRES_IN=90d 
 JWT_COOKIE_EXPIRES_IN=90
@@ -9,3 +9,4 @@ EMAIL_USERNAME=1f36ba8c6c4af9
 EMAIL_PASSWORD=6d50a6dd3b8a34
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=465
+CORS = https://yourfrontend.vercel.app
